display listView of searched users (only one user until firebase integration)

--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -17,4 +17,11 @@
         android:text="[username confirmation goes here]"
         />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/usernameTextView"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
